[CSS Grid Layout] Prevent issues with checkLayout() in grid items
When we use checkLayout() on a grid item, the results (PASS or FAIL
messages) are added as new auto-placed items in the grid. This causes
that the grid is marked as dirty which could hide bugs in the tests.

Modify the related layout tests to use a different container for the
test results. Updated expectations accordingly.

There is one test missing
"grid-item-addition-auto-placement-update.html". Which will be modified
in the patch to fix the bug in RenderGrid::addChild() (see
https://codereview.chromium.org/198703004/).

Review URL: https://codereview.chromium.org/208133003

git-svn-id: svn://svn.chromium.org/blink/trunk@169777 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/css-grid-layout/grid-auto-columns-rows-update.html
+++ b/LayoutTests/fast/css-grid-layout/grid-auto-columns-rows-update.html
@@ -24,12 +24,12 @@ function updateAndCheck(gridElementID, defaultSizing, gridItemSize)
     gridItem.setAttribute("data-expected-width", gridItemSize.width);
     gridItem.setAttribute("data-expected-height", gridItemSize.height);
 
-    checkLayout("#" + gridElementID);
+    checkLayout("#" + gridElementID, document.getElementById("test-output"));
 }
 
 function updateGridAutoRowsColumns()
 {
-    checkLayout('.grid');
+    checkLayout('.grid', document.getElementById("test-output"));
 
     // The constrained example is always sized to the min width so we don't test max width.
     updateAndCheck("constrainedGrid", { 'rows': 'minmax(20em, 15px)', 'columns': '50px' }, { 'width': '50px', 'height': '200px' });
@@ -83,6 +83,8 @@ window.addEventListener("load", updateGridAutoRowsColumns, false);
         <div class="sizedToGridArea secondRowSecondColumn" data-offset-x="10" data-offset-y="20" data-expected-width="50" data-expected-height="30">XXXXX XXXXXX</div>
     </div>
 </div>
+
+<div id="test-output"></div>
 
 </body>
 </html>
