--- a/LayoutTests/fast/css-grid-layout/grid-item-with-percent-min-max-height-dynamic.html
+++ b/LayoutTests/fast/css-grid-layout/grid-item-with-percent-min-max-height-dynamic.html
@@ -26,7 +26,7 @@ function testLayout(gridElementID, gridTracks, size)
     var gridItem = gridElement.firstChild.nextSibling;
     gridItem.setAttribute("data-expected-width", size.width);
     gridItem.setAttribute("data-expected-height", size.height);
-    checkLayout("#" + gridElementID)
+    checkLayout("#" + gridElementID, document.getElementById("test-output"))
 }
 
 function runTests()
@@ -55,6 +55,8 @@ window.addEventListener("load", runTests, false);
 <div id="gridWithMaxHeightItem" class="grid">
     <div id="maxHeightPercent"></div>
 </div>
+
+<div id="test-output"></div>
 
 </body>
 </html>
