--- a/LayoutTests/fast/css-grid-layout/grid-item-addition-auto-placement-update.html
+++ b/LayoutTests/fast/css-grid-layout/grid-item-addition-auto-placement-update.html
@@ -21,30 +21,31 @@ function testAddition(gridElementID, position, autoFlowElementID, size)
     var autoFlowElement = document.getElementById(autoFlowElementID);
     autoFlowElement.setAttribute("data-expected-width", size.width);
     autoFlowElement.setAttribute("data-expected-height", size.height);
-    checkLayout("#" + autoFlowElementID);
+    checkLayout("#" + autoFlowElementID, document.getElementById("test-output"));
 }
 
 function testAdditions()
 {
-    checkLayout("#autoFlowColumnElement");
+    var testOutput = document.getElementById("test-output");
+    checkLayout("#autoFlowColumnElement", testOutput);
     testAddition("gridAutoFlowColumn", { 'row': '1', 'column': '1' }, "autoFlowColumnElement", { 'width': '50', 'height': '100' });
     testAddition("gridAutoFlowColumn", { 'row': '1', 'column': '2' }, "autoFlowColumnElement", { 'width': '50', 'height': '100' });
     testAddition("gridAutoFlowColumn", { 'row': '2', 'column': '2' }, "autoFlowColumnElement", { 'width': '50', 'height': '100' });
     testAddition("gridAutoFlowColumn", { 'row': '2', 'column': '1' }, "autoFlowColumnElement", { 'width': '170', 'height': '50' });
 
-    checkLayout("#autoFlowRowElement");
+    checkLayout("#autoFlowRowElement", testOutput);
     testAddition("gridAutoFlowRow", { 'row': '1', 'column': '1' }, "autoFlowRowElement", { 'width': '100', 'height': '50' });
     testAddition("gridAutoFlowRow", { 'row': '2', 'column': '1' }, "autoFlowRowElement", { 'width': '100', 'height': '50' });
     testAddition("gridAutoFlowRow", { 'row': '2', 'column': '2' }, "autoFlowRowElement", { 'width': '100', 'height': '50' });
     testAddition("gridAutoFlowRow", { 'row': '1', 'column': '2' }, "autoFlowRowElement", { 'width': '50', 'height': '30' });
 
-    checkLayout("#gridAutoFlowColumnWithAuto");
+    checkLayout("#gridAutoFlowColumnWithAuto", testOutput);
     testAddition("gridAutoFlowColumnWithAuto", { 'row': 'auto', 'column': '1' }, "autoFlowColumnElementWithAuto", { 'width': '50', 'height': '100' });
     testAddition("gridAutoFlowColumnWithAuto", { 'row': '1', 'column': '1' }, "autoFlowColumnElementWithAuto", { 'width': '100', 'height': '50' });
     testAddition("gridAutoFlowColumnWithAuto", { 'row': 'auto', 'column': '2' }, "autoFlowColumnElementWithAuto", { 'width': '100', 'height': '100' });
     testAddition("gridAutoFlowColumnWithAuto", { 'row': '2', 'column': '2' }, "autoFlowColumnElementWithAuto", { 'width': '170', 'height': '50' });
 
-    checkLayout("#gridAutoFlowRowWithAuto");
+    checkLayout("#gridAutoFlowRowWithAuto", testOutput);
     testAddition("gridAutoFlowRowWithAuto", { 'row': '1', 'column': 'auto' }, "autoFlowRowElementWithAuto", { 'width': '100', 'height': '50' });
     testAddition("gridAutoFlowRowWithAuto", { 'row': 'auto', 'column': '1' }, "autoFlowRowElementWithAuto", { 'width': '100', 'height': '50' });
     testAddition("gridAutoFlowRowWithAuto", { 'row': '1', 'column': '2' }, "autoFlowRowElementWithAuto", { 'width': '50', 'height': '100' });
@@ -79,6 +80,8 @@ window.addEventListener("load", testAdditions, false);
         <div class="sizedToGridArea autoRowAutoColumn" id="autoFlowRowElementWithAuto" data-expected-width="50" data-expected-height="50">XXXXX XXXXX XXXXX</div>
     </div>
 </div>
+
+<div id="test-output"></div>
 
 </body>
 </html>
