Only :host and :ancestor should ever match the host in a ShadowRoot
We were blocking tag, id and class from matching when put before :host, but were
not correctly stopping things like :first-child:host or *:host.

Instead of trying to black list selectors we need to whitelist :host and
:ancestor as being special.

It turns out we did have test coverage for this, but the expected results were
all wrong so it printed PASS even though we were failing what the test was
supposed to be testing.

BUG=355149, 355158

Review URL: https://codereview.chromium.org/208933006

git-svn-id: svn://svn.chromium.org/blink/trunk@169799 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/dom/shadow/ancestor-pseudo-class.html
+++ b/LayoutTests/fast/dom/shadow/ancestor-pseudo-class.html
@@ -53,7 +53,7 @@ sandbox.appendChild(
             createDOM('div', {},
                 document.createTextNode('Hello')))));
 
-backgroundColorShouldBe('host', 'rgb(0, 128, 0)');
+backgroundColorShouldBe('host', 'rgba(0, 0, 0, 0)');
 
 cleanUp();
 
