--- a/LayoutTests/fast/dom/shadow/host-pseudo-class.html
+++ b/LayoutTests/fast/dom/shadow/host-pseudo-class.html
@@ -53,7 +53,7 @@ sandbox.appendChild(
             createDOM('div', {},
                 document.createTextNode('Hello')))));
 
-backgroundColorShouldBe('host', 'rgb(0, 128, 0)');
+backgroundColorShouldBe('host', 'rgba(0, 0, 0, 0)');
 
 cleanUp();
 
