--- a/LayoutTests/media/controls-drag-timebar.html
+++ b/LayoutTests/media/controls-drag-timebar.html
@@ -19,8 +19,9 @@
                 seekCount = 0;
                 moveCount = 0;
 
-                if (window.eventSender) {
+                testExpected("video.paused", false);
 
+                if (window.eventSender) {
                     var seekCoords;
                     try {
                         seekCoords = mediaControlsButtonCoordinates(video, "timeline");
@@ -34,6 +35,8 @@
                     eventSender.dragMode = false;
                     eventSender.mouseMoveTo(x, y);
                     eventSender.mouseDown();
+
+                    testExpected("video.paused", true);
 
                     // Drag mouse off of the slider thumb to make sure it continues to track
                     y += 100;
@@ -56,24 +59,31 @@
 
             function seeked()
             {
+
                 ++seekCount;
                 if (seekCount < 6) {
                     window.setTimeout("move()", 100);
                     return;
                 }
 
-                if (window.eventSender)
+                if (window.eventSender) {
+                    testExpected("video.paused", true);
                     eventSender.mouseUp();
+                }
+
+                testExpected("video.paused", false);
+
                 endTest();
             }
 
             function start()
             {
                 findMediaElement();
-                waitForEventOnce('canplaythrough', test);
+                waitForEventOnce('playing', test);
                 waitForEvent('seeked', seeked);
                 video.src = findMediaFile("video", "content/test");
-            }    
+                video.play();
+            }
         </script>
     </head>
 
