Revert of Implement /content/ combinator. (https://codereview.chromium.org/187353003/)
Reason for revert:
Shadow DOM styling spec was changed.
/content/ was reverted in the spec.

Original issue's description:
> Implement /content/ combinator.
> 
> spec: shadow styling
> http://dev.w3.org/csswg/shadow-styling/#content-combinator
> 
> The added layout tests are basically the same as ::content's, because /content/ combinator should have almost the same behavior (except css text, ::content with descendant combinator).
> 
> BUG=349334
> TEST=fast/dom/shadow/cascade-of-treeboundary-crossing-rules.html,fast/dom/shadow/content-combinator-css-text.html,fast/dom/shadow/content-combinator-dynamic-attribute-change.html,fast/dom/shadow/content-combinator-in-inert-shadow.html,fast/dom/shadow/content-combinator-scoped.html,fast/dom/shadow/content-combinator-with-cat.html,fast/dom/shadow/content-combinator-with-hat.html,fast/dom/shadow/content-combinator-with-host-pseudo-class-2.html,fast/dom/shadow/content-combinator-with-host-pseudo-class.html,fast/dom/shadow/content-combinator.html,fast/dom/shadow/multiple-content-combinator.html,fast/dom/shadow/no-style-sharing-with-uncommon-attribute-and-content-combinator.html
> 
> Committed: https://src.chromium.org/viewvc/blink?view=rev&revision=169085

BUG=349334
TBR=dglazkov@chromium.org,hayato@chromium.org

Review URL: https://codereview.chromium.org/205563004

git-svn-id: svn://svn.chromium.org/blink/trunk@169822 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/dom/shadow/content-pseudo-element-with-host-pseudo-class.html
+++ b/LayoutTests/fast/dom/shadow/content-pseudo-element-with-host-pseudo-class.html
@@ -11,7 +11,7 @@
       :host > .blue {
         color: blue;
       }
-      :host content /content/ * {
+      :host > ::content > * {
         color: red;
       }
     </style>
@@ -28,7 +28,7 @@
   <pre id="console"></pre>
 </body>
 <script>
-description("Test for crbug.com/274063, cannot style /content/ with a rule that includes :host.");
+description("Test for crbug.com/274063, cannot style ::content with a rule that includes :host.");
 
 var host = document.querySelector('#host');
 var root = host.createShadowRoot();
