--- a/LayoutTests/fast/dom/shadow/content-pseudo-element-with-host-pseudo-class-2.html
+++ b/LayoutTests/fast/dom/shadow/content-pseudo-element-with-host-pseudo-class-2.html
@@ -9,7 +9,7 @@
   <pre id="console"></pre>
 </body>
 <script>
-description("Test for crbug.com/274063: cannot style /content/ with a rule that includes :host.");
+description("Test for crbug.com/274063: cannot style ::content with a rule that includes :host.");
 
 var sandbox = document.getElementById('sandbox');
 
@@ -17,11 +17,11 @@ sandbox.appendChild(
     createDOM('div', {'id': 'host1'},
         createShadowRoot(
             createDOM('style', {},
-                document.createTextNode(':host > div > content /content/ * { color: green; }')),
+                document.createTextNode(':host > div > ::content > * { color: green; }')),
             createDOM('div', {'id': 'host2'},
                 createShadowRoot(
                     createDOM('style', {},
-                        document.createTextNode(':host > content /content/ * { color: red; }')),
+                        document.createTextNode(':host > ::content > * { color: red; }')),
                     createDOM('content', {'id': 'content2'})),
                 createDOM('content', {'id': 'content1'}))),
         createDOM('div', {'class': 'content'},
