Deflake inspector/tracing.html
BUG=305842
TBR=pfeldman

Review URL: https://codereview.chromium.org/209423003

git-svn-id: svn://svn.chromium.org/blink/trunk@169840 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/tracing.html
+++ b/LayoutTests/inspector/tracing.html
@@ -12,7 +12,9 @@ div#test {
 <script>
 function doWork()
 {
-    document.getElementById("test").style.display = "block";
+    var element = document.getElementById("test");
+    element.style.display = "block";
+    var unused = element.clientWidth;
 }
 
 function test()
