--- a/LayoutTests/inspector/sources/debugger/dom-breakpoints.html
+++ b/LayoutTests/inspector/sources/debugger/dom-breakpoints.html
@@ -55,12 +55,38 @@ function breakDebugger()
     debugger;
 }
 
+function authorShadowRoot()
+{
+    return document.getElementById("hostElement").shadowRoot;
+}
+
+function authorShadowElement(id)
+{
+    return authorShadowRoot().getElementById(id);
+}
+
+function appendElementToAuthorShadowTree(parentId, childId)
+{
+    var child = document.createElement("div");
+    child.id = childId;
+    authorShadowElement(parentId).appendChild(child);
+}
+
+function appendElementToAuthorShadowRoot(childId)
+{
+    var child = document.createElement("div");
+    child.id = childId;
+    authorShadowRoot().appendChild(child);
+}
+
 function test()
 {
     WebInspector.inspectorView.showPanel("elements");
 
     var pane = WebInspector.domBreakpointsSidebarPane;
     var rootElement;
+    var outerElement;
+    var authorShadowRoot;
     InspectorTest.runDebuggerTestSuite([
         function testInsertChild(next)
         {
@@ -219,7 +245,52 @@ function test()
                 InspectorTest.addResult("Append childElement to rootElement.");
                 waitUntilPausedAndDumpStack(next);
             }
+        },
+
+        function testInsertChildIntoAuthorShadowTree(next)
+        {
+            InspectorTest.shadowRootByHostId("hostElement", callback);
+
+            function callback(node)
+            {
+                authorShadowRoot = node;
+                InspectorTest.addResult("Test that 'Subtree Modified' breakpoint on author shadow root is hit when appending a child.");
+                pane._setBreakpoint(authorShadowRoot, pane._breakpointTypes.SubtreeModified, true);
+                InspectorTest.addResult("Set 'Subtree Modified' DOM breakpoint on author shadow root.");
+                InspectorTest.evaluateInPageWithTimeout("appendElementToAuthorShadowRoot('childElement')");
+                InspectorTest.addResult("Append childElement to author shadow root.");
+                waitUntilPausedAndDumpStack(next);
+            }
+        },
+
+        function testReloadWithShadowElementBreakpoint(next)
+        {
+            InspectorTest.nodeWithId("outerElement", step1);
+
+            function step1(node)
+            {
+                outerElement = node;
+
+                InspectorTest.addResult("Test that shadow DOM breakpoints are persisted between page reloads.");
+                pane._setBreakpoint(outerElement, pane._breakpointTypes.SubtreeModified, true);
+                pane._saveBreakpoints();
+                InspectorTest.addResult("Set 'Subtree Modified' DOM breakpoint on outerElement.");
+                InspectorTest.reloadPage(step2);
+            }
+
+            function step2()
+            {
+                InspectorTest.expandElementsTree(step3);
+            }
+
+            function step3()
+            {
+                InspectorTest.evaluateInPageWithTimeout("appendElementToAuthorShadowTree('outerElement', 'childElement')");
+                InspectorTest.addResult("Append childElement to outerElement.");
+                waitUntilPausedAndDumpStack(next);
+            }
         }
+
     ]);
 
     function waitUntilPausedAndDumpStack(callback)
@@ -272,6 +343,12 @@ Tests DOM breakpoints. <a href="https://bugs.webkit.org/show_bug.cgi?id=42886">B
 <div id="rootElement" style="color: red">
 <div id="elementToRemove"></div>
 </div>
+
+<div id="hostElement"></div>
+<script>
+var root = document.getElementById("hostElement").createShadowRoot();
+root.innerHTML = "<div id='outerElement' style='red'><input id='input'/></div>";
+</script>
 
 </body>
 </html>
