--- a/LayoutTests/crypto/wrap-unwrap.html
+++ b/LayoutTests/crypto/wrap-unwrap.html
@@ -3,6 +3,7 @@
 <head>
 <script src="../resources/js-test.js"></script>
 <script src="resources/common.js"></script>
+<script src="resources/keys.js"></script>
 </head>
 <body>
 <p id="description"></p>
