Add sysexEnabled readonly attribute to MIDIAccess
To conform the latest W3C spec, add sysexEnabled attribute.
http://www.w3.org/TR/webmidi/#idl-def-MIDIAccess

MIDIAccess originally has a method sysExEnabled().
To avoid having two functions for the same operation, this change
renames it to sysexEnabled(). This change affects other caller
implementations.

To rename everything in blink, it modifies blink API.
So this change is also the first step of blink API change.

Here are a series of changes.
1. this change
2. https://codereview.chromium.org/210003002/
3. https://codereview.chromium.org/208423016/

BUG=349538
TEST=LayoutTests/webmidi

Review URL: https://codereview.chromium.org/208243014

git-svn-id: svn://svn.chromium.org/blink/trunk@169909 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/webmidi/permission.html
+++ b/LayoutTests/webmidi/permission.html
@@ -8,7 +8,11 @@
 
 description("Test if sysex permission request is handled.");
 
-shouldBeDefined("testRunner.setMIDISysExPermission");
+// FIXME: remove following workaround once testRunner in Chromium has a new interface.
+if (!testRunner.setMIDISysexPermission)
+    testRunner.setMIDISysexPermission = testRunner.setMIDISysExPermission;
+
+shouldBeDefined("testRunner.setMIDISysexPermission");
 shouldBeDefined("navigator.requestMIDIAccess");
 
 window.jsTestIsAsync = true;
@@ -19,7 +23,7 @@ var finishSuccessfully = function () {
 }
 
 var rejectSysEx = function (next) {
-    testRunner.setMIDISysExPermission(false);
+    testRunner.setMIDISysexPermission(false);
     promise = navigator.requestMIDIAccess({sysex: true});
     shouldBeDefined("promise");
     shouldBeDefined("promise.then");
@@ -36,12 +40,16 @@ var rejectSysEx = function (next) {
 }
 
 var acceptSysEx = function (next) {
-    testRunner.setMIDISysExPermission(true);
+    testRunner.setMIDISysexPermission(true);
     promise = navigator.requestMIDIAccess({sysex: true});
     shouldBeDefined("promise");
     shouldBeDefined("promise.then");
-    promise.then(function(access) {
+    promise.then(function(obtainedAccess) {
         testPassed("sysex permission request is successfully accepted.");
+        access = obtainedAccess;
+        shouldBeDefined("access");
+        shouldBeDefined("access.sysexEnabled");
+        shouldBeTrue("access.sysexEnabled");
         if (next)
             next();
         else
