--- a/LayoutTests/webmidi/send_messages.html
+++ b/LayoutTests/webmidi/send_messages.html
@@ -8,12 +8,16 @@
 
 description("Test if various kinds of MIDI messages can be validated.");
 
-shouldBeDefined("testRunner.setMIDISysExPermission");
+// FIXME: remove following workaround once testRunner in Chromium has a new interface.
+if (!testRunner.setMIDISysexPermission)
+    testRunner.setMIDISysexPermission = testRunner.setMIDISysExPermission;
+
+shouldBeDefined("testRunner.setMIDISysexPermission");
 shouldBeDefined("navigator.requestMIDIAccess");
 
 window.jsTestIsAsync = true;
 
-testRunner.setMIDISysExPermission(true);
+testRunner.setMIDISysexPermission(true);
 
 navigator.requestMIDIAccess({sysex: true}).then(function (a) {
     output = a.outputs()[0];
@@ -24,7 +28,7 @@ navigator.requestMIDIAccess({sysex: true}).then(function (a) {
     // Running status is not allowed in Web MIDI API.
     shouldThrow('output.send([0x00, 0x01])');
 
-    // Unexpected End of SysEx.
+    // Unexpected End of Sysex.
     shouldThrow('output.send([0xf7])');
 
     // Unexpected reserved status bytes.
@@ -77,7 +81,7 @@ navigator.requestMIDIAccess({sysex: true}).then(function (a) {
     // Valid messages with Real-Time messages.
     output.send([0x90, 0xff, 0xff, 0x00, 0xff, 0x01, 0xff, 0x80, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff]);
 
-    // SysEx messages.
+    // Sysex messages.
     output.send([0xf0, 0x00, 0x01, 0x02, 0x03, 0xf7]);
     output.send([0xf0, 0xf8, 0xf7, 0xff]);
     shouldThrow('output.send([0xf0, 0x80, 0xf7])');
