Remove EventPath::parent() in favor of NodeRenderingTraversal::parent().
EventPath::parent() is only used in adjusting the result of HitTest in some places.
For example, if a text node is clicked, we have to adjust the result to the *reasonable* parent element of the text node.

In adjusting, we should use NodeRenderingTraversal::parent() instead of EventPath::parent().
That means the adjusted result is no longer shadow roots or insertion points.
The result would be the parent element of the text node in the composed tree.
That should make sense because neither shadow roots nor insertion points are rendered.

BUG=354366

Review URL: https://codereview.chromium.org/210753002

git-svn-id: svn://svn.chromium.org/blink/trunk@169923 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/dom/shadow/shadow-dom-event-dispatching-distributed-text-node.html
+++ b/LayoutTests/fast/dom/shadow/shadow-dom-event-dispatching-distributed-text-node.html
@@ -12,14 +12,15 @@
     <script>
         var sandbox = document.getElementById('sandbox');
 
-        // Makes sure an insertion point can receive a event when a distributed text node is clicked.
+        // Makes sure the parent of the insertion point can receive an event when a distributed text node is clicked.
         sandbox.appendChild(
             createDOM('div', {'id': 'top'},
                       createDOM('div', {'id': 'shadow-host'},
                                 createShadowRoot({'id': 'shadow-root'},
-                                                 createDOM('content', {'id': 'content'})),
+                                                 createDOM('div', {'id': 'content-parent'},
+                                                           createDOM('content', {'id': 'content'}))),
                                 document.createTextNode('Text Node'))));
-        addEventListeners(['top', 'shadow-host', 'shadow-host/', 'shadow-host/content']);
+        addEventListeners(['top', 'shadow-host', 'shadow-host/', 'shadow-host/content-parent', 'shadow-host/content']);
         showSandboxTree();
 
         // Calculates the position of the text node.
